# grayscale_conversion_pkg

./: README.md  package.xml  setup.cfg  setup.py
grayscale_conversion_pkg/: grayscale_node.py
